# Real-time-rendering-of-animated-meshless-representations

./: .gitmodules  CMakeLists.txt  README.md
cmake/: assimp.cmake  libigl.cmake
objects/: ArloDance.glb  ArloDance2.glb  rigArlo.rig  selfIntersect.glb  tetArlo.glb
src/: 0_ArloSDF.cpp  1_AnimatedCage.cpp  2_AnimatedSDF.cpp  3_AnimatedVoxel.cpp  4_AnimatedFBM.cpp  5_AnimatedDynamicFBM.cpp  6_AnimatedDensityField.cpp  7_SelfIntersection.cpp  8_IntegrationWithTriangle.cpp  9_WiggleArlo.cpp
src/shader/: commun.glsl
src/shader/0_coarse/: loadTets.comp  loadVertices.comp  singleTet.comp  uniformQuadALL.comp  uniformQuadSurface.comp
src/shader/1_spaceDeformation/: globalImplicite.comp  rig.comp
src/shader/2_intervalShading/: clipTet.comp  interval_noclip.mesh
src/shader/3_fragment/: surface.frag  surfaceDepth.frag  voxel.frag  voxelColorFromSDF.frag  voxelVisible.frag  voxelsdf.frag  voxelsdfD.frag  voxelsdfR.frag  voxelsdfShade.frag  voxelsdfZ.frag  worldSpaceTransparency.frag
src/shader/4_postProcess/: 0_fbm.frag  0_sdf.frag  0_transparant.frag  0_voxel.frag  0_voxelSdf.frag  colorExagerated.frag  identity.frag  identity1.frag
src/shader/9_miscellaneous/: implicite2voxel.comp  mesh.frag  mesh.mesh  meshZ.frag  sortingTest.comp  voxelEdition.comp  voxelFBM.comp  voxelGeneration.comp  voxelGenerationSDF.comp  voxelGenerationSDF2.comp  voxelVisible.comp
src/tetMeshGen/: MC.h  extractRigPosition.py  generateShellFromSDF.cpp  generateTetMesh.cpp
src/utils/: Tetmesh.h  animation.h  betterGui.h  guiVoxel.h  trackball.h
